--- a/scss/components/_aboutPage.scss
+++ b/scss/components/_aboutPage.scss
@@ -1,4 +1,6 @@
 #aboutPage {
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
   min-height: fit-content;
   background-color: $even-background;
   .container {
@@ -10,7 +12,9 @@
   }
 
   .aboutContainer {
-    min-height: 100%;
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
     height: 100%;
 
     .aboutComponents {
@@ -38,77 +42,6 @@
   } 
 }
 
-// @media screen and (min-width: 535px)
-// and (max-width: 580.9999px) {
-//   #aboutPage {
-//     height: 1200px;
-//   }
-// }
-
-// @media screen and (min-width: 581px)
-// and (max-width: 640.9999px) {
-//   #aboutPage {
-//     height: 1245px;
-//   }
-// }
-
-// @media screen and (min-width: 641px)
-// and (max-width: 680.9999px) {
-//   #aboutPage {
-//     height: 1285px;
-//   }
-// }
-
-// @media screen and (min-width: 681px)
-// and (max-width: 740.9999px) {
-//   #aboutPage {
-//     height: 1330px;
-//   }
-// }
-
-// @media screen and (min-width: 741px)
-// and (max-width: 767.9999px)  {
-//   #aboutPage {
-//     height: 1375px;
-//   }
-// }
-
-// @media screen and (min-width: 768px)
-// and (max-width: 840.9999px)   {
-//   #aboutPage {
-//     height: 1475px;
-//   }
-// }
-
-// @media screen and (min-width: 841px)
-// and (max-width: 890.9999px)  {
-//   #aboutPage {
-//     height: 1535px;
-//   }
-// }
-
-// @media screen and (min-width: 841px)
-// and (max-width: 890.9999px)  {
-//   #aboutPage {
-//     height: 1535px;
-//   }
-// }
-
-// @media screen and (min-width: 891px)
-// and (max-width: 940.9999px) {
-//    #aboutPage {
-//     height: 1595px;
-//   }
-// }
-
-// @media screen and (min-width: 941px)
-// and (max-width: 991.9999px) {
-//    #aboutPage {
-//     height: 1655px;
-//   }
-// }
-
-
 
 @media screen and (min-width: 992px) {
   #aboutPage {
@@ -117,11 +50,5 @@
     .container {
       height: 100%;
     }
-
-    // .aboutJumbotron {
-    //   height: 93.8vh;
-    //   //width: 50vw;
-    //    margin-bottom:  0px !important;
-    // }
   }
 }
