--- a/scss/components/_presentationPage.scss
+++ b/scss/components/_presentationPage.scss
@@ -10,12 +10,12 @@
 
   .presentationContainer {
     min-height: -webkit-fit-content;
-  min-height: -moz-fit-content;
-  min-height: fit-content;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
     background-color: $odd-background;
-    //background-image: url('../img/5.gif');
-    //background-position: top;
-    //background-size: cover;
+    // background-image: url('../img/giphy.gif');
+    // background-position: top;
+    // background-size: cover;
     p {
       color: $odd-text;
     }
