--- a/scss/components/_presentationPage.scss
+++ b/scss/components/_presentationPage.scss
@@ -13,7 +13,7 @@
     min-height: -moz-fit-content;
     min-height: fit-content;
     background-color: $odd-background;
-    // background-image: url('../img/giphy.gif');
+    // background-image: url('../img/1.gif');
     // background-position: top;
     // background-size: cover;
     p {
@@ -21,7 +21,7 @@
     }
     .container {
       width: 95%;
-      background-color: $odd-background;
+      background-color: rgba(255,255,255,1);
     }
 
     padding-bottom: 2em;
