--- a/scss/components/_portofolioPage.scss
+++ b/scss/components/_portofolioPage.scss
@@ -15,14 +15,9 @@
     min-height: -webkit-fit-content;
     min-height: -moz-fit-content;
     min-height: fit-content;
-    height: 100%;
 
-   
     .portofolioComponents {
       padding: 2em 0em;
-      min-height: -webkit-fit-content;
-      min-height: -moz-fit-content;
-      min-height: fit-content;
       
       img {
         width: 98% !important;
@@ -79,9 +74,9 @@
   transition: .5s ease;
   opacity: 0;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 89%;
+  top: 35%;
+  left: 49%;
+  width: 88%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%)
 }
@@ -118,6 +113,13 @@
       height: 100%;
     }
   }
+
+  .overlay {
+  top: 40%;
+  left: 49.4;
+  width: 92%;
+  }
+
   .overlayContent {
     font-size: 2em !important;
   }
