--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,72 @@ p, h1, h3, h4, h5, h6 {
   font-weight: normal;
 }
 
+/* line 42, ../scss/base/_base.scss */
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* line 51, ../scss/base/_base.scss */
+.loader img {
+  padding: 1em;
+  border: 10px solid #f3f3f3;
+  /* Light grey */
+  border-bottom: 10px solid #3C3E3D;
+  /* Blue */
+  border-radius: 50%;
+  width: 20vh;
+  height: 20vh;
+  margin-top: 30vh;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+/* line 62, ../scss/base/_base.scss */
+.loader h5 {
+  padding: 2em;
+  font-weight: bold;
+}
+
+@-webkit-keyframes spin {
+  /* line 69, ../scss/base/_base.scss */
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  /* line 70, ../scss/base/_base.scss */
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  /* line 74, ../scss/base/_base.scss */
+  0% {
+    transform: rotate(0deg);
+  }
+
+  /* line 75, ../scss/base/_base.scss */
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media screen and (orientation: landscape) {
+  /* line 80, ../scss/base/_base.scss */
+  .loader img {
+    width: 30vh;
+    height: 30vh;
+    margin-top: 20vh;
+  }
+}
+@media screen and (min-width: 992px) {
+  /* line 90, ../scss/base/_base.scss */
+  .loader img {
+    width: 15vh;
+    height: 15vh;
+    margin-top: 35vh;
+  }
+}
 /* line 1, ../scss/layout/_header.scss */
 .headerStyle {
   box-shadow: 0 12px 12px -12px rgba(0, 0, 0, 0.5) !important;
@@ -549,80 +615,66 @@ header nav .navStyle ul .currentPage i {
 }
 
 /* line 61, ../scss/components/_portofolioPage.scss */
-.portofolioHover {
+.overlayContainer {
   position: relative;
+  margin-bottom: 1.85em;
 }
 
-/* line 65, ../scss/components/_portofolioPage.scss */
+/* line 66, ../scss/components/_portofolioPage.scss */
 .image {
   opacity: 0.3;
+  display: block;
   width: 100%;
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
 }
 
-/* line 73, ../scss/components/_portofolioPage.scss */
+/* line 75, ../scss/components/_portofolioPage.scss */
 .overlay {
   transition: .5s ease;
   opacity: 0;
   position: absolute;
-  top: 35%;
-  left: 49%;
-  width: 88%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
 
-/* line 84, ../scss/components/_portofolioPage.scss */
-.portofolioHover:hover .image {
+/* line 85, ../scss/components/_portofolioPage.scss */
+.overlayContainer:hover .image {
   opacity: 0.3;
 }
 
-/* line 88, ../scss/components/_portofolioPage.scss */
-.portofolioHover:hover .overlay {
+/* line 89, ../scss/components/_portofolioPage.scss */
+.overlayContainer:hover .overlay {
   opacity: 1;
 }
 
-/* line 92, ../scss/components/_portofolioPage.scss */
+/* line 93, ../scss/components/_portofolioPage.scss */
 .overlayContent {
   background-color: #191919;
-  opacity: 0.8;
+  opacity: 0.9;
   color: #7f8c8d;
   font-size: 1.5em;
   font-weight: bold;
-  padding: 0.3em;
-}
-/* line 99, ../scss/components/_portofolioPage.scss */
-.overlayContent a {
-  text-decoration: none;
-  color: #7f8c8d;
-}
-/* line 103, ../scss/components/_portofolioPage.scss */
-.overlayContent a:hover {
-  color: white;
+  padding: 0.4em;
+  letter-spacing: 2px;
 }
 
 @media screen and (min-width: 992px) {
-  /* line 109, ../scss/components/_portofolioPage.scss */
+  /* line 104, ../scss/components/_portofolioPage.scss */
   #portofolioPage {
     height: 97vh;
   }
-  /* line 112, ../scss/components/_portofolioPage.scss */
+  /* line 106, ../scss/components/_portofolioPage.scss */
   #portofolioPage .container {
     height: 100%;
   }
 
-  /* line 117, ../scss/components/_portofolioPage.scss */
-  .overlay {
-    top: 40%;
-    left: 49.4;
-    width: 92%;
-  }
-
-  /* line 123, ../scss/components/_portofolioPage.scss */
+  /* line 111, ../scss/components/_portofolioPage.scss */
   .overlayContent {
-    font-size: 2em !important;
+    font-size: 2em;
   }
 }
 /* line 1, ../scss/components/_aboutPage.scss */
@@ -653,20 +705,20 @@ header nav .navStyle ul .currentPage i {
   line-height: 1.6em;
   margin: 2em 0em;
 }
-/* line 24, ../scss/components/_aboutPage.scss */
+/* line 25, ../scss/components/_aboutPage.scss */
 #aboutPage .aboutContainer .aboutComponents .teamMember img {
   width: 60%;
 }
-/* line 27, ../scss/components/_aboutPage.scss */
+/* line 28, ../scss/components/_aboutPage.scss */
 #aboutPage .aboutContainer .aboutComponents .teamMember h3 {
   color: #333333;
   padding: 8px 0px;
 }
-/* line 31, ../scss/components/_aboutPage.scss */
+/* line 32, ../scss/components/_aboutPage.scss */
 #aboutPage .aboutContainer .aboutComponents .teamMember h4 {
   color: #333333;
 }
-/* line 34, ../scss/components/_aboutPage.scss */
+/* line 35, ../scss/components/_aboutPage.scss */
 #aboutPage .aboutContainer .aboutComponents .teamMember p {
   color: #333333;
   padding: 15px 0px;
@@ -674,11 +726,11 @@ header nav .navStyle ul .currentPage i {
 }
 
 @media screen and (min-width: 992px) {
-  /* line 47, ../scss/components/_aboutPage.scss */
+  /* line 48, ../scss/components/_aboutPage.scss */
   #aboutPage {
     height: 97vh;
   }
-  /* line 50, ../scss/components/_aboutPage.scss */
+  /* line 51, ../scss/components/_aboutPage.scss */
   #aboutPage .container {
     height: 100%;
   }
