--- a/scss/components/_portofolioPage.scss
+++ b/scss/components/_portofolioPage.scss
@@ -58,12 +58,14 @@
   
 }
 
-.portofolioHover {
+.overlayContainer {
   position: relative;
+  margin-bottom: 1.85em;
 }
 
 .image {
   opacity: 0.3;
+  display: block;
   width: 100%;
   height: auto;
   transition: .5s ease;
@@ -74,53 +76,39 @@
   transition: .5s ease;
   opacity: 0;
   position: absolute;
-  top: 35%;
-  left: 49%;
-  width: 88%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%)
+  -ms-transform: translate(-50%, -50%);
 }
 
-.portofolioHover:hover .image {
+.overlayContainer:hover .image {
   opacity: 0.3;
 }
 
-.portofolioHover:hover .overlay {
+.overlayContainer:hover .overlay {
   opacity: 1;
 }
 
 .overlayContent {
   background-color: $footer-color;
-  opacity: 0.8;
+  opacity: 0.9;
   color: $footer-highlight;
   font-size: 1.5em;
   font-weight: bold;
-  padding: 0.3em;
-  a {
-    text-decoration: none;
-    color: $footer-highlight;
-  }
-  a:hover {
-    color: white;
-  }
+  padding: 0.4em;
+  letter-spacing: 2px;
 }
 
 @media screen and (min-width: 992px) {
   #portofolioPage {
-    //margin-bottom: $jumbotrons-margin-bottom !important;
     height: 97vh;
     .container {
       height: 100%;
     }
   }
 
-  .overlay {
-  top: 40%;
-  left: 49.4;
-  width: 92%;
-  }
-
   .overlayContent {
-    font-size: 2em !important;
+    font-size: 2em;
   }
 }
