--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -8,8 +8,8 @@ $roboto: 'Roboto', sans-serif;
 $jumbotrons-margin-bottom: -30px;
 $odd-background: #fff;
 $odd-text: #333;
-$even-background: #ccc;
+$even-background: rgba(255, 255, 255, 1);
 $even-text: #333;
-$header-background: #fff;
-$header-highlight: #333;
+$header-background: rgba(155, 7, 9, 0.8);
+$header-highlight: #fff;
 $header-logo: #fff;
