--- a/scss/components/_aboutPage.scss
+++ b/scss/components/_aboutPage.scss
@@ -24,6 +24,9 @@
         margin: 2em 0em;
         img {
           width: 60%;
+          border-radius: 50%;
+          background-color: $header-background;
+          margin: 0% 20%;
         }
         h3 {
           color: $even-text;
