--- a/scss/components/_presentationPage.scss
+++ b/scss/components/_presentationPage.scss
@@ -13,15 +13,15 @@
     min-height: -moz-fit-content;
     min-height: fit-content;
     background-color: $odd-background;
-    // background-image: url('../img/1.gif');
-    // background-position: top;
-    // background-size: cover;
+    background-image: url('../img/1.gif');
+    background-position: top left;
+    background-size: cover;
     p {
       color: $odd-text;
     }
     .container {
       width: 95%;
-      background-color: rgba(255,255,255,1);
+      background-color: rgba(255,255,255,0.9);
     }
 
     padding-bottom: 2em;
