--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -63,6 +63,11 @@ html {
 		padding: 2em;
 		font-weight: bold;
 	}
+	h6 {
+		font-weight: bold;
+	  margin-top: -1em;
+
+	}
 }
 
 @-webkit-keyframes spin {
